pp2/samples/tested/interface.decaf.test

*** Error line 33.
  green = New(Color);
             ^
*** syntax error

